--- a/src/components/contactForm/contactForm.scss
+++ b/src/components/contactForm/contactForm.scss
@@ -2,7 +2,6 @@
 
 .contactform-section{
   height: 100vh;
-  padding: 0;
 
   .container{
     display: flex;
@@ -59,7 +58,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        column-gap: 1rem;
         padding: 0 2rem;
         box-sizing: border-box;
       }
@@ -80,10 +78,10 @@
       label{
         color: var(--text-grey);
         text-transform: uppercase;
+        width: 60px;
       }
 
       input, textarea{
-        width: 100%;
         border: 1.5px solid var(--color-pink);
         border-radius: 5px;
         padding: 0.2rem;
@@ -91,6 +89,7 @@
       }
 
       input{
+        flex: 1;
         height: 30px;
       }
 
