--- a/src/components/qna/qna.scss
+++ b/src/components/qna/qna.scss
@@ -2,7 +2,6 @@
 
 .qna-section{
 
-  min-height: 50vh;
   height: auto;
   padding: 1rem 0 0 0;
   background-color: var(--color-lightpink);
@@ -17,22 +16,50 @@
     padding: 5rem 0;
   }
 
-  h2{
-    font-size: 4rem;
-    text-align: center;
-    color: var(--color-pink);
-    margin: 1rem 0;
+  .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+
+  .qna-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 
     @include respond(lg){
-      font-size: 3rem;
-    }
-
-    @include respond(sm){
-      font-size: 2.5rem;
+      flex-direction: column;
+      row-gap: 1.5rem;
     }
   }
 
+  .qna-container-left{
+    flex: 0.45;
+
+    h2{
+      font-size: 4rem;
+      text-align: left;
+      color: var(--color-pink);
+      margin: 1rem 0;
+
+      @include respond(lg){
+        font-size: 3rem;
+      }
+
+      @include respond(sm){
+        font-size: 2.5rem;
+      }
+    }
+  }
+
+  // container left
+  
+
+  // right
+
   .question-list{
+    flex: 0.55;
     display: flex;
     flex-direction: column;
     justify-content: center;
