--- a/src/components/qnaCard/qnaCard.scss
+++ b/src/components/qnaCard/qnaCard.scss
@@ -7,27 +7,27 @@
   box-sizing: border-box;
   text-align: left;
 
-  h3{
-    font-size: 1.6rem;
+  @include respond(lg){
+    padding: 1rem;
+  }
+
+  .question-title-wrapper{
+    
     color: #FFF;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    column-gap: 1rem;
-    margin: 0.4rem 0;
+    column-gap: 0.5rem;
     width: 100%;
 
-    @include respond(lg){
-    font-size: 1.4rem;
-    }
+    h3{
+      margin: 0.4rem 0;
+      flex: 1;
+      font-size: 1.3rem;
 
-    @include respond(md){
-      flex-direction: column;
-      row-gap: 0.5rem;
-    }
-
-    @include respond(sm){
-      font-size: 1.1rem;
+      @include respond(sm){
+        font-size: 1.1rem;
+      }
     }
 
     svg{
@@ -49,8 +49,7 @@
     
   }
 
-  h4{
-    font-size: 1.1rem;
+  p{
     font-weight: 500;
     color: var(--text-grey);
   }
