--- a/src/components/reviewCard/reviewCard.scss
+++ b/src/components/reviewCard/reviewCard.scss
@@ -5,7 +5,7 @@
   height: 300px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: flex-start;
 
   background-color: rgba($color: #E69C9C, $alpha: 0.3);
@@ -34,12 +34,22 @@
 
   }
 
+  
+
   .stars{
     color: rgba($color: #F5A623, $alpha: 0.5);
   }
 
   .username-tag{
-    color: var(--color-pink)
+    color: var(--color-pink);
+    font-weight: 600;
+  }
+
+  .review-card-bottom{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
  
