--- a/src/components/testimonial/testimonial.scss
+++ b/src/components/testimonial/testimonial.scss
@@ -5,6 +5,12 @@
   background-color: var(--color-lightpink);
   overflow-x: hidden;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 0;
+
   @include respond(lg){
     height: auto;
     padding-bottom: 3rem;
