--- a/src/components/whyChooseUs/whychooseus.scss
+++ b/src/components/whyChooseUs/whychooseus.scss
@@ -5,6 +5,10 @@
   background-color: var(--color-pink);
   overflow: hidden;
 
+  @include respond(sm){
+    height: auto;
+  }
+
   h2{
     font-size: 1.5rem;
     color: #FFF;
