update promotion constant

--- a/src/components/serviceCard/serviceCard.scss
+++ b/src/components/serviceCard/serviceCard.scss
@@ -20,7 +20,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // z-index: 1;
   }
 
   .image-wrapper{
@@ -88,10 +87,14 @@
   .service-list li{
     list-style: none;
     font-weight: 600;
+    text-transform: uppercase;
   }
-  
+}
 
-  
+#hairservice-card img{
+  transform: translate(0, 60px);
+}
 
-
+#makeupservice-card img{
+  transform: translate(15px, 0);
 }
