--- a/src/sections/promotionSection/promotionSection.scss
+++ b/src/sections/promotionSection/promotionSection.scss
@@ -51,13 +51,17 @@
       flex-direction: column;
       justify-content: space-between;
 
+      .promotion-card_order{
+        color: var(--text-grey);
+        font-weight: 600;
+      }
+
       h3{
         margin: 0.5rem 0;
       }
 
-      .promotion-card_order{
-        color: var(--text-grey);
-        font-weight: 600;
+      p{
+        font-size: calc(1.2 * var(--p-size));
       }
     
     }
@@ -89,7 +93,26 @@
     }
   }
 
+  .promotion-card.end-promotion{
+    position: relative;
 
+    &::after{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      content: 'Unavailable';
+      font-size: 2rem;
+      text-transform: uppercase;
+      color: var(--text-grey);
+      position: absolute;
+      font-weight: 500;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba($color: #FFF, $alpha: 0.7);
+    }
+  }
 
 }
 
